# vitru-problem-rc-beam

./: .gitignore  README.md  THIRD_PARTY_LICENSES  pyproject.toml
vitru_problem_rc_beam/: __init__.py  analyse.py
vitru_problem_rc_beam.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
vitru_problem_rc_beam/geometry/: rectangular.py
vitru_problem_rc_beam/schemas/: rc_beam_base.yaml  rc_beam_rectangular.yaml
vitru_problem_rc_beam/tests/: test_inputs.py
